manifests/development/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cnv-middleware-api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnv-middleware-api 
  template:
    metadata:
      labels:
        app: cnv-middleware-api  
    spec:
      containers:
        - name: cnv-middleware-api  
          image: IMAGE:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 1880
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: production-env
              mountPath: /app/env/PRODUCTION.env
              subPath: PRODUCTION.env
            - mountPath: "/mount"
              name: nodered-managed-disk
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "2"

      volumes:
        - name: production-env
          configMap:
            name: production-env
        - name: nodered-managed-disk
          persistentVolumeClaim:
            claimName: nodered-managed-disk-pvc
