manifests/development/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cnv-middleware-api 
  annotations:
    nginx.org/websocket-services: cnv-middleware-api 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cloud.google.com/neg: '{"ingress": false}'
spec:
  tls: 
    - secretName: admin-cnv-tls
      hosts:
        - conversation-platform.productdock.com
  rules:
    - host: conversation-platform.productdock.com
      http:
        paths:
          - path: /api/
            backend:
              serviceName: cnv-middleware-api 
              servicePort: 3000
          - path: /socket.io/
            backend:
              serviceName: cnv-middleware-api 
              servicePort: 3000
          - path: /red/
            backend:
              serviceName: cnv-middleware-api 
              servicePort: 1880
